--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,10 @@
 </head>
 <body>
   <header>
+    {% block header %}
+
+    {% endblock header %}
+    <h1></h1>
     <nav>
       <ul>
         <li>
@@ -29,7 +33,8 @@
     {% endblock content %}
   </main>
   <footer>
-    this is footer
+    <h3>Thank you for visiting!</h3>
+    <h3>Hope you enjoyed your time here!</h3>
   </footer>
 </body>
 </html>
